--- a/src/components/Navigation/styles/_submenu.scss
+++ b/src/components/Navigation/styles/_submenu.scss
@@ -1,8 +1,15 @@
 .gc-submenu {
   display: none;
   position: absolute;
+  top: 100%;
+  left: 0;
   background-color: transparent;
   z-index: $zlayer-top;
+
+  @include gx-phone {
+    left: auto;
+    right: 0;
+  }
 
   &__content {
     padding: 10px;
